# bidopsai

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  COGNITO_SETUP.md  DEPLOYMENT_SETUP.md  Makefile  READMD.md  README.md  opencode.json
.github/: README.md
.github/workflows/: PIPELINE-SETUP.md  PRE-COMMIT-SETUP.md  README.md  cd-production.yml  cd-staging.yml  ci-cd.yml  ci.yaml  ci.yml  deploy-web.yml  deploy.yml  security-scan.yml
.kiro/steering/: agent-core-standards.md  agent-core-testing.md  fe-standards.md  fe-testing-standards.md  gql-api-standards.md  gql-testing-standards.md  product.md  structure.md  tech.md
.specify/memory/: constitution.md
agents-core/: .env.example  README.md  pyproject.toml
agents-core/agents/: __init__.py  ai_assistant_supervisor.py  analysis_agent.py  base_agent.py  comms_agent.py  compliance_agent.py  content_agent.py  knowledge_agent.py  parser_agent.py  qa_agent.py  submission_agent.py  workflow_supervisor.py
agents-core/core/: __init__.py  agentcore_memory.py  config.py  conversation_manager.py  database.py  error_handling.py  error_recovery.py  memory_hooks.py  memory_manager.py  observability.py  sse_manager.py
agents-core/docs/: AGENT_REFACTORING_SUMMARY.md  MODEL_CONFIGURATION.md
agents-core/docs/refactor/: PHASE1_MCP_INTEGRATION_COMPLETE.md  PHASE2_SUPERVISOR_AGENT_COMPLETE.md  PHASE3_BATCH1_COMPLETE.md  PHASE3_BATCH2_COMPLETE.md  PHASE3_BATCH3_COMPLETE.md  PHASE3_BATCH4_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_SUB_AGENTS_PLAN.md  PHASE4_GRAPH_REFACTOR_COMPLETE.md  PHASE4_GRAPH_REFACTOR_PLAN.md  PHASE5_FASTAPI_INTEGRATION_COMPLETE.md  PHASE5_FASTAPI_INTEGRATION_PLAN.md  PHASE6_TESTING_VALIDATION_PLAN.md  PHASE6_VALIDATION_RESULTS.md  PHASE7_OOP_REFACTOR_COMPLETE.md  PHASE7_OOP_REFACTOR_FINAL.md  PHASE7_OOP_REFACTOR_PLAN.md  REFACTOR_COMPLETE.md
agents-core/llm/: __init__.py  model_factory.py
agents-core/models/: __init__.py  artifact_models.py  base.py  llm_output_models.py  request_models.py  sse_models.py  workflow_models.py
agents-core/prompts/: README.md  prompt_manager.py
agents-core/prompts/ai_assistant/: analysis_assistant.txt  content_assistant.txt  general_assistant.txt  knowledge_assistant.txt
agents-core/prompts/workflow/: analysis.txt  comms.txt  compliance.txt  content.txt  knowledge.txt  parser.txt  qa.txt  submission.txt  supervisor.txt
agents-core/scripts/deploy/: build_and_push_to_ecr.sh  update_agentcore_runtime.sh
agents-core/supervisors/: __init__.py
agents-core/supervisors/ai_assistant/: __init__.py  agent_builder.py  agent_executor.py  intent_classifier.py  state_models.py
agents-core/supervisors/workflow/: __init__.py  agent_builder.py  agent_executor.py  config.py  graph_nodes.py  state_models.py
agents-core/tests/: __init__.py
agents-core/tools/: tool_config.py  tool_manager.py
agents-core/tools/communication/: email_tool.py
agents-core/tools/database/: __init__.py  db_tools.py
agents-core/tools/email/: email_sender.py
agents-core/tools/mcp/: bedrock_da_mcp.py  bedrock_da_mcp_client.py  slack_mcp.py  slack_mcp_client.py
agents-core/tools/storage/: artifact_export.py  s3_tools.py
agents-core/tools/strands_tools/: __init__.py
apps/web/: .dockerignore  .prettierrc  AUTHENTICATION_IMPLEMENTATION.md  FIXES_APPLIED.md  MOCK_AUTH_INSTRUCTIONS.md  PERFORMANCE_MONITORING_GUIDE.md  README.md  SECURITY_AND_WARNINGS.md  TASK_10_COMPLETE.md  TASK_11_COMPLETE.md  TASK_12_COMPLETE.md  TASK_13_COMPLETE.md  TASK_14.1_COMPLETE.md  TASK_14_COMPLETE.md  TASK_15_COMPLETE.md  TASK_16_COMPLETE.md  TASK_2_COMPLETE.md  TASK_3_COMPLETE.md  TASK_4_COMPLETE.md  TASK_5_COMPLETE.md  TASK_6_COMPLETE.md  TASK_7_COMPLETE.md  TASK_8_COMPLETE.md  TASK_9_COMPLETE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
docker/: README.md  docker-compose.dev.yml
docs/architecture/: README.md
docs/database/: bidopsai.mmd
docs/scratches/: 01-initial.md  design.md
infra/: AGENTS.md
infra/cdk/: .gitignore  README.md  README_PHASE11.md  S3_DEPLOYMENT_GUIDE.md  cdk.context.json  cdk.json  config.py  package-lock.json  package.json  tsconfig.json
infra/cloud-formation/: README.md
infra/docker/: DOCKER_SETUP.md  README.md  docker-compose.dev.yml  docker-compose.yml
infra/scripts/: deploy.sh
scripts/: README.md  build-agent.sh  build-and-push.sh  clean-bidopsai-stack.sh  cleand-and-run-stack.sh  deploy.sh  push-to-ecr.sh  verify-ecr-image.sh
services/core-api/: .env  .env.example  .eslintrc.js  .gitignore  README.md  jest.config.js  (+4 more)
(+488 files in other folders)
